# simple_zkp_dao

./: Cargo.toml
src/: main.rs  zkp.rs
static/: index.html
