[package]
name = "simple_zkp_dao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
zkp = "0.8.0"
rand = "0.8.5"
actix-files = "0.6"
